--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="element"></div>
+    <div class="parallax-container">
+      <div class="background">
+        <img
+          class="background__image"
+          src="https://s3-ap-southeast-2.amazonaws.com/daily-fire-assets/codepen-assets/building.jpg"
+        />
+      </div>
+      <div class="foreground">
+        <div class="foreground__content">
+          <h1>Oooo, parallax</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
